# videocut

./: .gitignore  AGENTS.md  Makefile  README.md  README.old.md  READMEv2.md  ReadmeUpdated.md  annotate_segments.py  auto_segment_nicholson.py  board_members.txt  clip_transcripts.py  clip_utils.py  codepaths.md  dev-requirements.txt  download-meeting.sh  generate_nicholson_segments.py  lightweight_process.py  llm_segmentation.py  no_transcribe_requirements.txt  parse_nicholson_pdf.py  parse_pdf_text.py  people.json  process_video.py  process_video_patched.py  process_video_working.py  pyproject.toml  requirements.txt  segmentation_rules.md  segmenter.py  segments.txt  specification.md  tests.md  transcribe.py  transcribe_mlx.py  transcript.txt  videocut_python_spec.md  whispercpp_to_transcript.py
legacy_scripts/: add_timestamps.py  generate_nicholson_segments.py
scripts/: annotate_segments_step.py  auto_mark_nicholson_step.py  concatenate_clips_step.py  extract_marked_step.py  generate_clips_step.py  identify_clips_json_step.py  identify_clips_step.py  json_to_editable_step.py  json_to_tsv_step.py  run_pipeline.py  transcribe_step.py
tests/: test_align.py  test_alignment.py  test_auto_segment_nicholson.py  test_chair_rollcall.py  test_cli_generate_clips.py  test_core.py  test_import.py  test_may_board_meeting.py  test_mbm_root.py  test_pdf_utils.py  test_pipeline_recognition.py  test_segment.py  test_segmentation_utils.py  test_segments.py  test_segments_format.py  test_speaker_mapping.py  test_transcript_timestamps.py
tools/whisper/: whisper
v2/: pipeline.py
videocut/: __init__.py  cli.py  parse_pdf_text.py  segmenter.py
videocut/commands/: __init__.py  authorize.py  transcribe.py  transcribe_cpp.py  upload.py
videocut/core/: __init__.py  align.py  alignment.py  annotation.py  chair.py  clip_transcripts.py  clip_utils.py  concat.py  concat_dip.py  convert.py  crossfade_preview.py  crossfader.py  dtw_align.py  label_fix.py  nicholson.py  pdf_utils.py  segmentation.py  speaker_mapping.py  srt_markers.py  transcribe.py  transcription.py  video_editing.py
videos/June_Performance_Meeting/: June_Performance.json  June_Performance.srt  June_Performance.tsv  June_Performance.txt  June_Performance.vtt  dtw-transcript.txt  markup_guide.txt  matched_dtw.json  pdf_transcript.json  pdf_transcript.txt  segments.txt
videos/May_Board_Meeting/: May_Board_Meeting.json  May_Board_Meeting.srt  May_Board_Meeting.tsv  May_Board_Meeting.txt  May_Board_Meeting.vtt  May_Board_Meeting_processed.srt  matched.json  (+11 more)
(+57 files in other folders)
