[project]
name = "videocut"
version = "0.4.0"
description = "Video editing pipeline driven by WhisperX transcripts"
readme = "README.md"
authors = [{name = "VideoCut Maintainers"}]
requires-python = ">=3.11"
dependencies = [
  "click",
  "typer>=0.12",
  "ffmpeg-python",
  "python-dotenv>=1.0",
  "rapidfuzz>=2.15,<3.0",
  "numpy",
  "python-dateutil",
  "google-auth-oauthlib",
  "google-api-python-client",
  "pdfminer.six"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "ipython"
]
transcribe = [
  "torch",
  "torchaudio",
  "whisperx"
]

[project.scripts]
videocut = "videocut.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["videos*"]
